code25_all/scala/4364601.txt
Iterator.sum
def sum[B >: A](implicit num: Numeric[B]): B = foldLeft(num.zero)(num.plus)

Numeric
scala> List(1, 2, 3).sum
res0: Int = 6

scala> List("a", "b").sum
<console>:6: error: could not find implicit value for parameter num: Numeric[java.lang.String]
       List("a", "b").sum
                  ^

My2Col
class My2Col[A](a1 : A, a2 : A)

A : Numeric
a2 > a1
A
My2Col("a", "b") //OK
My2Col("b", "a") //OK
My2Col(1, 2)     //OK
My2Col(2, 1)     //THROW IllegalArgumentException

